--- a/quimera_robot_navigation/package.xml
+++ b/quimera_robot_navigation/package.xml
@@ -15,16 +15,8 @@
   <depend>amcl</depend>
   <depend>map_server</depend>
   <depend>move_base</depend>
-  <!-- <build_export_depend>amcl</build_export_depend>
-  <build_export_depend>diffbot_bringup</build_export_depend>
-  <build_export_depend>map_server</build_export_depend>
-  <build_export_depend>move_base</build_export_depend>
-  <exec_depend>amcl</exec_depend>
-  <exec_depend>diffbot_bringup</exec_depend>
-  <exec_depend>map_server</exec_depend>
-  <exec_depend>move_base</exec_depend> -->
-
-
+  <depend>dwa_local_planner</depend>
+  
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
