--- a/quimera_robot_control/config/quimera_control.yaml
+++ b/quimera_robot_control/config/quimera_control.yaml
@@ -39,8 +39,8 @@ quimera_robot:
     pose_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
     twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
 
-    # # Top level frame (link) of the robot description
-    # base_frame_id: base_footprint
+    # Top level frame (link) of the robot description
+    base_frame_id: base_footprint
 
     # # Velocity and acceleration limits for the robot
     # linear:
